[package]
name = "dta4hana"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.20"
env_logger = "0.10"
home = "0.5"
log = "0.4"
serde_json = "1.0"    # Add serde_json.
hmac-sha1 = "0.1.3"
structopt = "0.3"
ureq = { version = "2.6", features = ["json"] }
url = "2.2"

[dev-dependencies]
mockall = "0.11"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[features]
# strict = []
